# recipes

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLI.md  Makefile  README.md  TODO.md  USAGE.md  pyproject.toml
.github/workflows/: ci.yml  cog-readme.yml
cookbook/: AGENTS.md
cookbook/artifact-bench/: cookiecutter.json
cookbook/artifact-bench/hooks/: post_gen_project.py
cookbook/artifact-bench/{{cookiecutter.project_slug}}/: .gitattributes  .gitignore  .htmlvalidate.json  AGENTS.md  CHANGELOG.md  Makefile  README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
cookbook/artifact-bench/{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
cookbook/artifact-bench/{{cookiecutter.project_slug}}/docs/: authoring.md  manifest.yml  verification.md
cookbook/artifact-bench/{{cookiecutter.project_slug}}/scripts/: build.ts  check-all.ts  gallery.ts  serve.ts
cookbook/artifact-bench/{{cookiecutter.project_slug}}/shared/harness/: load-artifact.ts  storage-mock.ts
cookbook/artifact-bench/{{cookiecutter.project_slug}}/shared/types/: claude-storage.d.ts
cookbook/artifact-bench/{{cookiecutter.project_slug}}/src/hello-artifact/: PROMPTS.md  README.md  artifact.html  notes.md
cookbook/artifact-bench/{{cookiecutter.project_slug}}/src/hello-artifact/tests/: e2e.spec.ts  unit.spec.ts
cookbook/demos/: artifact-bench.md  narrative-game-template.md  narrative-game.md  python-project.md  repo-cli.md
cookbook/narrative-game-template/: cookiecutter.json
cookbook/narrative-game-template/{{cookiecutter.project_slug}}/: README.md
cookbook/narrative-game-template/{{cookiecutter.project_slug}}/src/: StoryScript.twee
cookbook/narrative-game-template/{{cookiecutter.project_slug}}/tests/: conftest.py
cookbook/narrative-game/hooks/: post_gen_project.py  pre_gen_project.py
cookbook/narrative-game/{{cookiecutter.project_slug}}/: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
cookbook/narrative-game/{{cookiecutter.project_slug}}/examples/: README.md  choice-fiction.twee  dark-room.twee
cookbook/narrative-game/{{cookiecutter.project_slug}}/scripts/: install-tweego.sh
cookbook/narrative-game/{{cookiecutter.project_slug}}/src/: Start.twee  StoryInit.twee  StoryStylesheet.twee  StoryTitle.twee
cookbook/narrative-game/{{cookiecutter.project_slug}}/tests/: test_smoke.py  test_source.py
cookbook/notes/: artifact-bench.md  narrative-game-template.md  narrative-game.md  python-project.md  repo-cli.md
cookbook/python-project/: cookiecutter.json
cookbook/python-project/.claude/prompts/TDD/: tdd-relaxed-example.md  tdd-relaxed-template.md
cookbook/python-project/hooks/: post_gen_project.py
cookbook/python-project/{{cookiecutter.project_slug}}/: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
cookbook/python-project/{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
cookbook/python-project/{{cookiecutter.project_slug}}/docs/: spec.md
cookbook/python-project/{{cookiecutter.project_slug}}/tests/: test_main.py
cookbook/python-project/{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/: __init__.py
cookbook/repo-cli/: cookiecutter.json
cookbook/repo-cli/hooks/: post_gen_project.py
cookbook/repo-cli/{{cookiecutter.project_slug}}/: .envrc  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CLI.md  Makefile  README.md  pyproject.toml
cookbook/repo-cli/{{cookiecutter.project_slug}}/.github/workflows/: ci.yml  update-readme.yml
cookbook/repo-cli/{{cookiecutter.project_slug}}/docs/: spec.md
cookbook/repo-cli/{{cookiecutter.project_slug}}/tests/: test_cli.py  test_dashboard.py  test_status.py  test_template.py  test_template_apply.py  test_template_prepare.py
cookbook/repo-cli/{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/: AGENTS.md
cookbook/repo-cli/{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/tui/: __init__.py  cli.py  dashboard.py  status.py  template.py
docs/: RELEASE.md  spec.md
feedback/: notes-artemis.md  notes-implode.md
narrative-game-template/: AGENTS.md  Makefile  README.md  _summary.md  demo.md  gen_charts.sh  notes.md  pyproject.toml
narrative-game-template/data/: README.md  form_primitive_usage.csv  story_format_features.csv
narrative-game-template/hooks/: post_gen_project.py  pre_gen_project.py
narrative-game-template/tests/: test_bake_default.py  test_bake_harness.py  test_cookiecutter_json.py  test_dist_compile.py  test_e2e_baked_smoke.py  test_ifid_synthesis.py  test_pre_gen_project.py  test_setup_twine.py  test_storydata_parses.py
narrative-game-template/{{cookiecutter.project_slug}}/: pyproject.toml
narrative-game-template/{{cookiecutter.project_slug}}/examples/: paperclips.twee
narrative-game-template/{{cookiecutter.project_slug}}/src/: StoryData.twee
narrative-game-template/{{cookiecutter.project_slug}}/tests/: test_smoke.py
python-project/: cookiecutter.json
python-project/{{cookiecutter.project_slug}}/: .gitignore  README.md  pyproject.toml
python-project/{{cookiecutter.project_slug}}/docs/: spec.md
python-project/{{cookiecutter.project_slug}}/scripts/: make_cookiecutter_template.py
python-project/{{cookiecutter.project_slug}}/tests/: test_main.py
recipes/: main.py
recipes_cli/: AGENTS.md  __init__.py  generalize.py  meld.py
recipes_cli/tui/: __init__.py  cli.py
scripts/: make_cookiecutter_template.py  meld_makefiles.py
tests/: AGENTS.md  helpers.py  test_bake_artifact_bench.py  test_bake_narrative_game.py  test_bake_narrative_game_template.py  test_bake_python_project.py  test_bake_repo_cli.py  test_cli.py  test_main.py  test_template_consistency.py
tests/cli/: conftest.py  test_generalize.py  test_help.py  test_meld_makefiles.py
