[project]
name = "recipes"
version = "0.1.0"
description = "My take on Recipes"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click",
    "pydantic",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
recipes = "recipes_cli.tui.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["recipes", "recipes_cli"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pyyaml",
    "ruff",
    "mypy",
    "pathspec",
]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = "recipes.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "recipes_cli.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
exclude = ["cookbook/"]
